--- a/style.css
+++ b/style.css
@@ -1,26 +1,33 @@
 /* CSS files add styling rules to your content */
 
 body {
-  font-family: monospace;
+  font-family: 'Secular One', sans-serif;
+ font-size: 12pt;
   margin: 2em;
   width: 100%;
   height: 100%;
+  background-image: linear-gradient(white, lightpink, deeppink);
 }
 
+
 h1 {
-  color: #373fff;
-  font-size: 18pt;
+  color: #e02866;
+  font-family: 'Secular One', sans-serif;
+  font-size: 24pt;
+
 }
 .special-h2{
   margin-top:0;
 }
 h2 {
+
+  font-family: 'Secular One', sans-serif;
   font-size: 18pt;
 /*   margin-top:0; */
 }
 
 button {
-  font-family: "Inconsolata", monospace;
+  font-family: "SecularOne", monospace;
   background-color: black;
   border: none;
   color: white;
@@ -35,6 +42,7 @@ button {
 }
 
 p {
+  font-family: 'Secular One', sans-serif;
   font-size: 12pt;
   line-height: 18pt;
 }
@@ -55,7 +63,7 @@ p {
 }
 
 .right {
-  width: 60%;
+  width: 100%;
   padding: 1%;
   float: left;
   display: inline-block;
@@ -71,7 +79,7 @@ p {
 }
 
 .content {
-  padding: 2%;
+  padding: 0%;
   width: 50%;
   display: inline-block;
   float: left;
@@ -84,6 +92,8 @@ ul {
 }
 
 li {
+  font-family: 'Secular One', sans-serif;
+  color:black;
   font-size: 12pt;
   list-style-type: none;
   padding-bottom: 1em;
@@ -101,6 +111,7 @@ li.bullet a {
 
 li a {
   color: black;
+  font-size:24;
   /*   text-decoration: none; */
 }
 
