--- a/style.css
+++ b/style.css
@@ -5,8 +5,10 @@ body {
  font-size: 12pt;
   margin: 2em;
   width: 100%;
-  height: 100%;
+  height: 150%;
+  background: deeppink;
   background-image: linear-gradient(white, lightpink, deeppink);
+  background-repeat: repeat-x;
 }
 
 
@@ -14,11 +16,21 @@ h1 {
   color: #e02866;
   font-family: 'Secular One', sans-serif;
   font-size: 24pt;
-
+  mix-blend-mode:darken;
+  line-height: 8pt;
+  line-break: 8pt;
 }
 .special-h2{
   margin-top:0;
 }
+
+footer{
+  content:"";
+  margin-top:100px;
+  padding-top:100px;
+}
+
+
 h2 {
 
   font-family: 'Secular One', sans-serif;
@@ -42,9 +54,10 @@ button {
 }
 
 p {
-  font-family: 'Secular One', sans-serif;
+  font-family: 'Nunito Sans', sans-serif;;
   font-size: 12pt;
   line-height: 18pt;
+  color:whitesmoke;
 }
 
 .left {
@@ -123,8 +136,8 @@ iframe {
   /*   height: 400px; */
   display: inline-block;
   float: left;
-  margin-bottom: 2%;
-}
+  margin-bottom: 8%;
+}xs
 
 .full-width-box {
   width: 100%;
