--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ p {
 
 .content {
   padding: 0%;
-  width: 50%;
+  width: 600px;
   display: inline-block;
   float: left;
   /*   background-color:yellow; */
